Update project information and author details in package.json

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "repository": "https://github.com/theringsofsaturn/3D-art-gallery",
+  "name": "三道 - SAN DAO | Third Way House",
   "author": {
     "name": "Emilian Kasemi",
-    "email": "emiliankasemi@gmail.com"
+    "email": "adm.san.dao.jia@gmail.com"
   },
   "license": "Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International",
   "dependencies": {
